# JobStalker

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyinstaller_build.py  pyproject.toml  requirements.txt
job-stalker/src/job_stalker/: ai_client.py  auth.py  cache.py  config.py  database.py  db.py  exceptions.py  filters.py  gpu_monitor.py  main.py  ml_filter.py  models.py  run.py  state.py  telegram_auth.py  vacancy_storage.py  web_ui.py
job-stalker/src/job_stalker/templates-html/: index.html
